# yaesm

./: .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile_pytest  Dockerfile_tests  README.md  Vagrantfile_pytest  docker-pytest.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_devel.txt  requirements_tests.txt  vagrant-pytest
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-manual.yml  run-tests.yml  test.yml
debian/: copyright  manpages
debian/source/: options
examples/: test_config.yaml
man/: yaesm.1  yaesm.1.md
packaging/: yaesm.service
packaging/debian/: changelog  control  copyright  rules
packaging/fedora/: yaesm.spec
src/: yaesm.py
src/yaesm/: backup.py  backupbase.py  cleanup.py  config.py  localbackup.py  logging.py  main.py  scheduler.py  snapshot.py  sshbackup.py  sshtarget.py  timeframe.py  ty.py
src/yaesm/backend/: backendbase.py  btrfsbackend.py  ext4backend.py  rsyncbackend.py  zfsbackend.py
src/yaesm/subcommand/: __init__.py  backupsubcommand.py  checksubcommand.py  runsubcommand.py  subcommandbase.py
tests/: README  README.md  conftest.py  looptest.py  test_config.yaml
tests/test_yaesm/: test_backup.py  test_cleanup.py  test_config.py  test_ext4.py  test_logging.py  test_main.py  test_scheduler.py  test_sshtarget.py  test_timeframe.py
tests/test_yaesm/test_backend/: test_backendbase.py  test_btrfsbackend.py  test_rsyncbackend.py  test_zfsbackend.py
tests/test_yaesm/test_subcommand/: test_backupsubcommand.py  test_checksubcommand.py  test_runsubcommand.py  test_subcommandbase.py
tests/yaesm/: test_backup.py  test_sshtarget.py
