[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yaesm"
version = "0.0.1"
description = "A backup tool with support for multiple filesystems"
authors = [
    {name = "Connor Gallivan"},
    {name = "Nicholas B. Hubbard", email = "nicholashubbard@posteo.net"}
]
maintainers = [
    {name = "Connor Gallivan"},
    {name = "Nicholas B. Hubbard", email = "nicholashubbard@posteo.net"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
keywords = ["backup", "filesystem", "snapshot"]

classifiers = [
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Backup",
]

dependencies = [
    "apscheduler>=3.11.0",
    "pyyaml>=6.0.2",
    "voluptuous>=0.15.2",
]

[project.scripts]
yaesm = "yaesm.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
    "pytest-ruff>=0.4.0",
    "pytest-ty>=0.0.1",
    "freezegun>=1.5.1",
]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
required-version = ">=0.15.0"
line-length = 100

[tool.ruff.lint]
select = ["D", "E4", "E7", "E9", "F", "UP", "B", "SIM", "I", "E501"]
ignore = ["D1", "D203", "D205", "D213", "D401", "D404"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
preview = false
docstring-code-format = true

[project.urls]
Homepage = "https://github.com/Vultimate1/yaesm"
Repository = "https://github.com/Vultimate1/yaesm"
Issues = "https://github.com/Vultimate1/yaesm/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--ruff",
    "--ruff-format",
    "--ty",
    "--cov=yaesm",
    "--cov-report=term-missing",
]

[tool.ty]
[tool.ty.src]
exclude = [".venv"]

[tool.ty.environment]
python-version = "3.10"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
]
